CSS fix for anchored element covered by top navbar

--- a/src/sass/mainStudy/_mainStudyPage.scss
+++ b/src/sass/mainStudy/_mainStudyPage.scss
@@ -32,4 +32,10 @@
       text-align: center;
     }
   }
+
+  // For anchored element hiding behind
+  // fixed position top navbar
+  div#endurance-training {
+    scroll-margin-top: 5.5em;
+  }
 }
